Added mobile design to home page
- touch-friendly design on tablet and phone sized devices (larger hit
targets)
- discover tiles shrink down as device size changes

--- a/mockups/index.html
+++ b/mockups/index.html
@@ -9,7 +9,12 @@
 <body>
 
 <div id="header">
-	<div id="login"><p><a>log in</a> | <a>sign up</a></p></div>
+	<div id="login">
+		<p>	
+		<a>log in</a>
+		<a>sign up</a>
+		</p>
+	</div>
 
 	<div class="title">
 		<p class="display">Media Public</p>
