Add wysiwig editor.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,5 +12,7 @@
   <body>
     <div class="application"></div>
     <script src="/javascript/build.js"></script>
+    <!-- TODO: This should be loaded as needed, at the very least only for admins. -->
+    <script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
   </body>
 </html>
