add copy changes

--- a/mockups/index.html
+++ b/mockups/index.html
@@ -4,13 +4,13 @@
 	<title>Media Public</title>
 
 	<link rel="stylesheet" type="text/css" href="css/master.css">
-	<link rel="stylesheet" type="text/css" href="css/home.css">	
+	<link rel="stylesheet" type="text/css" href="css/home.css">
 </head>
 <body>
 
 <div id="header">
 	<div id="login">
-		<p>	
+		<p>
 		<a>log in</a>
 		<a>sign up</a>
 		</p>
@@ -25,11 +25,14 @@
 <div id="search">
 	<div class="query">
 		<p class="display">Learn what&apos;s going on in public media.<p>
-		<p class="display"><a href="#">This is a prepopulated query for you. Yay!</a></p>
+		<p class="display"><a href="#">Discover stories across public media.</a></p>
 
 		<input type="text">
 		<select>
-			<option>filter</option>
+			<option>story</option>
+			<option>station</option>
+			<option>person</option>
+			<option>how-to</option>
 		</select>
 		<button>search</button>
 	</div>
@@ -43,44 +46,44 @@
 	<div class="suggested">
 		<a href="#">
 			<div class="object">
-				<p>Some type of awesome public media stuff</p>
+				<p>How did WBEZ get 150,000 new members in one day?</p>
 			</div>
 		</a>
 
 		<a href="#">
 			<div class="object">
-				<p>Another awesome public media thing</p>
+				<p>WDET's hour-long documentary about high school teaching</p>
 			</div>
 		</a>
 
 		<a href="#">
 			<div class="object">
-				<p>Even more great public media stuff</p>
+				<p>Help WHYY build a better mapping tool</p>
 			</div>
 		</a>
 
 		<a href="#">
 			<div class="object">
-				<p>Even more great public media stuff</p>
+				<p>See all science reporters in public media</p>
 			</div>
 		</a>
 
 		<a href="#">
 			<div class="object">
-				<p>Even more great public media stuff</p>
+				<p>Help WNYC log sleep patterns.</p>
 			</div>
 		</a>
 
 		<a href="#">
 			<div class="object">
-				<p>Even more great public media stuff</p>
+				<p>How could crowds benefit your station?</p>
 			</div>
 		</a>
 	</div>
 </div>
 
 <div id="footer">
-	<p>Media Public &copy; Media Public</p>	
+	<p>Media Public &copy; Media Public</p>
 </div>
 
 </body>
