Organizations list page and tweaks to Home
- mocked up first pass of organizations list
- added a concept of different tile types (how to, info, etc.) to Home

--- a/mockups/index.html
+++ b/mockups/index.html
@@ -5,6 +5,8 @@
 
 	<link rel="stylesheet" type="text/css" href="css/master.css">
 	<link rel="stylesheet" type="text/css" href="css/home.css">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
@@ -45,37 +47,37 @@
 
 	<div class="suggested">
 		<a href="#">
-			<div class="object">
+			<div class="object howto">
 				<p>How did WBEZ get 150,000 new members in one day?</p>
 			</div>
 		</a>
 
 		<a href="#">
-			<div class="object">
+			<div class="object story">
 				<p>WDET's hour-long documentary about high school teaching</p>
 			</div>
 		</a>
 
 		<a href="#">
-			<div class="object">
+			<div class="object help">
 				<p>Help WHYY build a better mapping tool</p>
 			</div>
 		</a>
 
 		<a href="#">
-			<div class="object">
+			<div class="object info">
 				<p>See all science reporters in public media</p>
 			</div>
 		</a>
 
 		<a href="#">
-			<div class="object">
+			<div class="object help">
 				<p>Help WNYC log sleep patterns.</p>
 			</div>
 		</a>
 
 		<a href="#">
-			<div class="object">
+			<div class="object howto">
 				<p>How could crowds benefit your station?</p>
 			</div>
 		</a>
