--- a/mockups/tiles.html
+++ b/mockups/tiles.html
@@ -5,6 +5,8 @@
 
 	<link rel="stylesheet" type="text/css" href="css/master.css">
 	<link rel="stylesheet" type="text/css" href="css/tiles.css">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div class="recordings">
